# memexor

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  coding-guidelines.md  docker-compose-milvus.yaml  docker-compose-weaviate.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
ingest/: Dockerfile  main.py  requirements.txt
mcp/: Dockerfile  main.py  requirements.txt
src/: __init__.py
src/application/: interfaces.py
src/config/: __init__.py  constants.py  settings.py
src/domain/: models.py
src/infrastructure/: __init__.py
src/infrastructure/embeddings/: __init__.py  openai_embeddings.py
src/infrastructure/vectorstores/: __init__.py  weaviate_store.py
src/presentation/: __init__.py  api.py
src/tests/domain/: test_models.py
tests/: test_memexor.py
utils/: embeddings.py  vector_db.py  weaviate.py
