[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memexor"
version = "0.1.0"
description = "A multimodal memory layer for LLM agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["llm", "memory", "vector-store", "embeddings"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "uvicorn>=0.15.0,<0.16.0",
    "python-multipart>=0.0.5",
    "openai>=0.27.0",
    "weaviate-client>=3.0.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
    "numpy>=1.21.0",
    "langchain>=0.0.200",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "isort>=5.9.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 